--- a/templates/pages/expenses.html
+++ b/templates/pages/expenses.html
@@ -27,10 +27,10 @@
         </div>
     </div>
 
-    <!-- Filters -->
+    {# Filters #}
     <div class="bg-white dark:bg-neutral-800 rounded-xl border border-neutral-200 dark:border-neutral-700 p-4">
         <div class="flex flex-col gap-4">
-            <!-- Date range navigation -->
+            {# Date range navigation #}
             <div class="flex flex-wrap items-center gap-2">
                 <a href="/expenses?{{ filter.base_query_string() }}{% if filter.base_query_string() != "" %}&{% endif %}from_date={{ date_range.prev().from_str() }}&to_date={{ date_range.prev().to_str() }}{% if date_range.prev().preset.is_some() %}&preset={{ date_range.prev().preset.unwrap().as_str() }}{% endif %}"
                     class="p-2.5 hover:bg-neutral-100 dark:hover:bg-neutral-700 rounded-lg transition-colors border border-neutral-200 dark:border-neutral-700"
@@ -76,7 +76,7 @@
                 </form>
             </div>
 
-            <!-- Search and category filter -->
+            {# Search and category filter #}
             <form hx-get="/expenses/table" hx-target="#expense-table" hx-trigger="change, keyup delay:300ms from:input[name='search']" class="flex flex-wrap gap-4">
                 <input type="hidden" name="from_date" value="{{ date_range.from_str() }}">
                 <input type="hidden" name="to_date" value="{{ date_range.to_str() }}">
