--- a/templates/pages/import_wizard.html
+++ b/templates/pages/import_wizard.html
@@ -9,7 +9,7 @@
         </a>
     </div>
 
-    <!-- Progress Steps -->
+    {# Progress Steps #}
     <div class="flex items-center justify-center space-x-4 mb-8">
         <div class="flex items-center">
             <div class="w-8 h-8 rounded-full flex items-center justify-center
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <!-- Main Content Area -->
+    {# Main Content Area #}
     {% include "partials/import_status.html" %}
 </div>
 {% endblock %}
