--- a/templates/partials/trading_activity_table.html
+++ b/templates/partials/trading_activity_table.html
@@ -26,7 +26,7 @@
         </table>
     </div>
 
-    <!-- Pagination -->
+    {# Pagination #}
     {% if total_count > page_size %}
     <div class="px-6 py-4 border-t border-neutral-200 dark:border-neutral-700 flex items-center justify-between">
         <p class="text-sm text-neutral-600 dark:text-neutral-400">
